--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 AzimutServer/*/__pycache__/
 AzimutServer/__pycache__/
-AzimutServer/*.pyc
+AzimutServer/*.pyc/
 AzimutServer/.env
 AzimutServer/.venv/
 AzimutServer/.idea
