--- a/AzimutServer/Dockerfile
+++ b/AzimutServer/Dockerfile
@@ -6,6 +6,7 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+RUN apt-get update && apt-get install -y netcat-openbsd
 
 # copy entire project
 COPY . .
