--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     image: postgres:15
     container_name: azimut_postgres
     environment:
-      POSTGRES_USER: raphael
-      POSTGRES_PASSWORD: Rahel2102!
+      POSTGRES_USER: xxxx
+      POSTGRES_PASSWORD: xxxxx
       POSTGRES_DB: azimut_db
     ports:
       - "5432:5432"
@@ -22,8 +22,8 @@ services:
     ports:
       - "8000:8000"
     environment:
-      DB_USER: raphael
-      DB_PWD: Rahel2102!
+      DB_USER: xxxx
+      DB_PWD: xxxx
       DB_NAME: azimut_db
       DB_HOST: db
     volumes:
