upgrade some definitions : - name of the APP - docker ignore - continue README

--- a/azimut_client/public/manifest.json
+++ b/azimut_client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Azimut",
+  "name": "Create React App to show live “targets”",
   "icons": [
     {
       "src": "favicon.ico",
