--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     image: postgres:15
     container_name: azimut_postgres
     environment:
-      POSTGRES_USER: raphael
-      POSTGRES_PASSWORD: Rahel2102!
+      POSTGRES_USER: xxx
+      POSTGRES_PASSWORD: xxxx
       POSTGRES_DB: azimut_db
     ports:
       - "5432:5432"
@@ -22,27 +22,27 @@ services:
     ports:
       - "8000:8000"
     environment:
-      DB_USER: raphael
-      DB_PWD: Rahel2102!
+      DB_USER: xxx
+      DB_PWD: xxxx
       DB_NAME: azimut_db
       DB_HOST: db
     volumes:
       - ./AzimutServer:/app
-  # client:
-  #   build:
-  #     context: ./azimut_client
-  #   container_name: azimut_front
-  #   ports:
-  #     - "3000:3000"
-  #   environment:
-  #     - CHOKIDAR_USEPOLLING=true
-  #   volumes:
-  #     - ./azimut_client:/app
-  #     - /app/node_modules
-  #   working_dir: /app
-  #   command: ["npm", "start"]
-  #   depends_on:
-  #     - api
+  client:
+    build:
+      context: ./azimut_client
+    container_name: azimut_front
+    ports:
+      - "3000:3000"
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+    volumes:
+      - ./azimut_client:/app
+      - /app/node_modules
+    working_dir: /app
+    command: ["npm", "start"]
+    depends_on:
+      - api
 
 volumes:
   pgdata:
