--- a/AzimutServer/Dockerfile
+++ b/AzimutServer/Dockerfile
@@ -15,6 +15,6 @@ COPY . .
 # run initial script to 
 #   - wait and check DB is mounted
 #   - create mock data and insert them in the table 
-    #  and launch the server
+#   -  launch the server
 RUN chmod +x entrypoint.sh
 ENTRYPOINT ["./entrypoint.sh"]
