--- a/azimut_client/Dockerfile
+++ b/azimut_client/Dockerfile
@@ -3,8 +3,11 @@ FROM node:18
 WORKDIR /app
 
 COPY package*.json ./
+# install dependencies 
 RUN npm install
 
+
+#copy project
 COPY . .
 
 EXPOSE 3000
