--- a/azimut_client/public/manifest.json
+++ b/azimut_client/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Azimut",
-  "name": "React App for Live Maritime Targets Dashboard”",
+  "name": "React App for Live Maritime Targets Dashboard",
   "icons": [
     {
       "src": "favicon.ico",
